--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,6 +39,16 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Finish vortex enemy
+        - Allow only moving in water when not under water, apply effect only to swimming actors
+        - Regular movement when underwater apply effect to all actors
+
+    - True sight indicators can appear in the wrong place initially
+        - Just hide them before they update, display after animationTime > 0
+
+    - Clones should still be destroyed when protected by iron skin, or be consistently protected.
+        - Right now they are destroyed if not controlled.
+
     - Add underwater mechanics
         - allow swimming over low/medium barriers (set floorHeight to 16px on these)
         - floating ice spikes that damage you and knock back like thorn bushes if you are too high in the water
@@ -66,6 +76,7 @@ Current tasks:
     - Add meteor attacks that leave behind rocks to void tree fight
         - Give to tree + voidFlame
         - Use smaller versions for enrage mode when voidFlame is active
+        - Reduce number of rocks in the golem fight and add this attack to it
 
     - Make sure bow can fire down cliffs in all directions.
 
