--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,6 +39,10 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Waterfall tower boss should take reduced damage instead of having a shield during enrage phase
+
+    - Empty shop items shouldn't be solid
+
     - Clones should still be destroyed when protected by iron skin, or be consistently protected.
         - Right now they are destroyed if not controlled.
 
