--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,14 +39,19 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Bug fix
+        - Elder/Rival cannot get out of the cut scene
+
+    - Show Hint marker when you aren't on the overworld.
+
+    - Allow teleporting over pits so we can teleport to moving platforms.
+
     - Finish Holy Sanctum
-        - Add ice sanctum
-            - freeze water to push a ball over (no skipping with staff/clones)
         - Add back of sanctum with big key
             - Include hybrid material/spirt world puzzles
+            - Early puzzle that requires the upgraded bow to complete
         - Add sanctum tower with bow in big chest
             - Include hybrid material/spirt world puzzles
-        - Add paths to back of sanctum that require small keys and level 2 bow, and double back to the main area with switches to open the back door
         - Add final sanctum areas + boss + phoenix crown
             - Include hybrid material/spirt world puzzles
         - Add peach piece to fire sanctum
