--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -39,11 +39,6 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Add object splash graphic
-    - Update icons
-    - Add enemy fall graphic
-
-    - Staff covers right half of off centered chests.
 
     - Holy sanctum key requirements appear broken, `entranceSeed=2` currently places a key after the 3 locks.
 
@@ -51,11 +46,21 @@ Current tasks:
 
     - Brain storm ideas to make lightning element more interesting
         - For puzzles
+            - More lightning switches that turn on things
+                - Add to holy sanctum back
+                - Probably use in forge as well
+                - Allow activating waterfall tower ladder from the bottom
+            - Lightning switch to open material world basement in staff tower
+                - 3 sentry bots that are off if boss is defeated, must be activated to defeat and get peach piece
+                - Can be done in randomizer without defeating boss but all 3 will be active at once
+                - Same switch exists in spirit world can let you shortcut to basement in randomizer
         - For combat
+            - Add aoe to lightning attacks, 24px radius normally and 40px radius for charge level 2
+            - More enemies weak against lightning
+            - Faster attack speed
 
-    - Allow sneaking into grand temple with invisibility
-        - Ultimately this should be a narration box that causes the guard to say Vanara cannot enter the temple.
-        - Make sure rolling doesn't let you pass
+    - Staff covers right half of off centered chests.
+        - check 4 points per tile instead of 1 probably
 
     - Finish Holy Sanctum
         - Add back of sanctum with big key
@@ -68,12 +73,22 @@ Current tasks:
         - Add peach piece to fire sanctum
             - true sight makes the piece obvious
             - requires using spirit sight to solve a puzzle in the alternate world, probably a hidden ball goal in the final room.
+                - Allow switches to target objects in the alternate world.
         - Add peach piece to lightning sanctum
-            - behind challenging platform puzzle similar to tower puzzle (easier with roll 2 or staff + lightning badge)
-                - probably moving platforms as I don't want to require cloud boots for this
+            - portal opens after getting key to material world
+            - 2 part platforming puzzle requires using staff to change path of floating platforms
+            - Escape portal at the halfway point so players can escape if they cannot complete second half
         - Add peach piece to ice sanctum
+            - Hidden randomized floor switches under ice plants
 
     - Replace pit in waterfall tower with a ladder that can only be opened from the top but can be used in both directions after.
+        - Add lightning switch to the bottom for opening this in advance.
+
+    - Brainstorm ideas for Sky Palace
+
+    - Allow sneaking into grand temple with invisibility
+        - Ultimately this should be a narration box that causes the guard to say Vanara cannot enter the temple.
+        - Make sure rolling doesn't let you pass
 
     - Upgrade entrance randomizer to support complex connected exit graphs.
         - Currently it only supports connected exits that can be traveled in all directions.
@@ -105,10 +120,7 @@ Current tasks:
     - Add additional uses for true sight
         - Invisible path tiles over pit that are revealed with true sight
             - Requires a new 'invisible' tile behavior
-        - Platforms that can move or be stationary and turn left right or reverse when hitting walls
-            - Can be made invisible
-            - Can be placed over pits or cracked ground
-            - Could add more pits to the spirit sky and use these for conveyence
+        - Invisible moving platform puzzle, possibly in spirit sky, or hype cave
         - Rolling ball puzzles that can be solved by moving an invisible pot
         - Invisible cracked doorway to a new cave in spirit world.
             - To prevent memorizing this in randomizer, we could randomly place the door in four different places that are inconvient to check
@@ -127,9 +139,6 @@ Current tasks:
 
     - Add void pit tiles and use them in the void area, add solid cliff edges to prevent jumping into the void.
         - This will allow the astral projection to move freely over the void.
-
-    - Possible additional true sight behavior
-        - Possibly increases tell durations for certain/all attacks with tellDuration by 50%?
 
     - Mysteries
         - Lava appears under floor 2 in the middle of void tree fight
