--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -45,26 +45,14 @@ Current tasks:
                 - Add to holy sanctum back
                 - Probably use in forge + sky palace as well
             - Lightning switch to open material world basement in staff tower
-                - 3 sentry bots that are off if boss is defeated, must be activated to defeat and get peach piece
+                - 3 sentry bots that are off if boss is defeated, must be activated to defeat and get gold ore
                 - Can be done in randomizer without defeating boss but all 3 will be active at once
                 - Same switch exists in spirit world can let you shortcut to basement in randomizer
         - For combat
             - Add aoe to lightning attacks, 24px radius normally and 40px radius for charge level 2
             - More enemies weak against lightning
             - Faster attack speed
-
-    - Finish Holy Sanctum
-        - Add back of sanctum with big key
-            - Include hybrid material/spirt world puzzles
-            - Early puzzle that requires the upgraded bow to complete
-        - Add sanctum tower with bow in big chest
-            - Include hybrid material/spirt world puzzles
-        - Add final sanctum areas + boss + phoenix crown
-            - Include hybrid material/spirt world puzzles
-        - Add peach piece to fire sanctum
-            - true sight makes the piece obvious
-            - requires using astral projection to solve a puzzle in the alternate world.
-                - Opens a linked portal where they can find the chest in the material world.
+            - 1/2 iframes from lightning damage for both hero/enemies.
 
     - Brainstorm ideas for Sky Palace
         - Wind streams that can push the player.
@@ -128,12 +116,16 @@ Current tasks:
     - Add void pit tiles and use them in the void area, add solid cliff edges to prevent jumping into the void.
         - This will allow the astral projection to move freely over the void.
 
+
+    - Holy Sanctum Improvements
+        - Add phoenix boss before phoenix crown prize
+        - Add sanctum tower with bow in big chest
+            - Include hybrid material/spirt world puzzles
+
     - Mysteries
         - Lava appears under floor 2 in the middle of void tree fight
         - Certain tiles can be frozen in lava on voidFlame
         - Enemies reset when collecting the staff tower.
-
-    - Fix bead flow depth by using sprite ordering for the ordered part instead of foreground, use the y value based on where it hits the floor but only draw it start 16px up from that point so it gradually covers while moving behind it.
 
     - Increase world map super tile size to at least 48x48 bu try 64x64
         - Change crater to single 64x64 tile if it is supported
